Fix placeholder search
ERM26008

[4.x]

Change-Id: I3f65093da2985f5b5efd13248a2da328e8f56e66

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -8,5 +8,6 @@
 	"unifiedtaskoverview-desc": "Provides a special page with an overview of the users tasks",
 	"unifiedtaskoverview": "My tasks",
 	"unifiedtaskoverview-label-no-task": "Currently there are no tasks to be completed.",
-	"unifiedtaskoverview-personal-url-my-tasks": "Tasks"
+	"unifiedtaskoverview-personal-url-my-tasks": "Tasks",
+	"unifiedtaskoverview-search-placeholder": "Search"
 }
