--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -8,5 +8,6 @@
 	"unifiedtaskoverview-desc": "{{desc|name=UnifiedTaskOverview}}",
 	"unifiedtaskoverview": "Special page name for [[Special:UnifiedTaskOverview]] special page.\n{{Identical|My tasks}}",
 	"unifiedtaskoverview-label-no-task": "Text that shows when the user does not have open tasks",
-	"unifiedtaskoverview-personal-url-my-tasks": "Label for the link in the personal urls that leads to the the specialpage [[Special:UnifiedTaskOverview]].\n{{Identical|Tasks}}"
+	"unifiedtaskoverview-personal-url-my-tasks": "Label for the link in the personal urls that leads to the the specialpage [[Special:UnifiedTaskOverview]].\n{{Identical|Tasks}}",
+	"unifiedtaskoverview-search-placeholder": "Placeholder label for search"
 }
