--- a/i18n/de.json
+++ b/i18n/de.json
@@ -2,5 +2,6 @@
 	"unifiedtaskoverview-desc": "Deutsche Beschreibung von UnifiedTaskOverview",
 	"unifiedtaskoverview": "Meine Aufgaben",
 	"unifiedtaskoverview-label-no-task": "Aktuell sind keine Aufgaben zu erledigen.",
-	"unifiedtaskoverview-personal-url-my-tasks": "Aufgaben"
+	"unifiedtaskoverview-personal-url-my-tasks": "Aufgaben",
+	"unifiedtaskoverview-search-placeholder": "Suche"
 }
