Sync I18N from master

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -2,9 +2,9 @@
 	"@metadata": {
 		"authors": [
 			"Ajeje Brazorf",
+			"Klein Muçi",
 			"Miriam Schlindwein",
-			"Patric Wirth",
-			"Klein Muçi"
+			"Patric Wirth"
 		]
 	},
 	"unifiedtaskoverview-desc": "{{desc|name=UnifiedTaskOverview}}",
