Add login link if anonym user try to access specialpage
ERM40861

[5.x]

Change-Id: I4382b638ed48cd24fa5a6d7033da96fe9e08aeac

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -8,5 +8,6 @@
 	"unifiedtaskoverview": "Meine Aufgaben",
 	"unifiedtaskoverview-label-no-task": "Aktuell sind keine Aufgaben zu erledigen.",
 	"unifiedtaskoverview-personal-url-my-tasks": "Aufgaben",
-	"unifiedtaskoverview-search-placeholder": "Suche"
+	"unifiedtaskoverview-search-placeholder": "Suche",
+	"unifiedtaskoverview-no-login-text": "Bitte melde dich an, um deine Aufgaben sehen zu können"
 }
